# udpcat

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
src/: client.rs  main.rs  server.rs  utils.rs
utils/src/: lib.rs
