[package]
name = "udpcat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "utils" }
clap = "4.3.10"
rand = "0.8.5"
tokio = { version = "1.29.1", features = ["full"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
